# PDFReader

./: .gitignore  CMakeLists.txt  PDFReader.code-workspace
src/core/: Back.cpp  Back.h  MainWindow.cpp  MainWindow.h  UI.cpp  UI.h  main.cpp
src/delegates/: Delegate.h  OpenFileDelegate.cpp  OpenFileDelegate.h  RenderDelegate.cpp  RenderDelegate.h
src/delegates/model/: DocumentModel.cpp  DocumentModel.h
